--- a/src/main/resources/com/example/frontend_urzisoft/About-view.fxml
+++ b/src/main/resources/com/example/frontend_urzisoft/About-view.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.effect.Glow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="550.0" maxWidth="958.0" minHeight="550.0" minWidth="958.0" prefHeight="550.0" prefWidth="958.0" style="-fx-background-color: #53736A;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="aboutPane" maxHeight="550.0" maxWidth="958.0" minHeight="550.0" minWidth="958.0" prefHeight="550.0" prefWidth="958.0" style="-fx-background-color: #6C9380;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane fx:id="SY" layoutX="-7.0" prefHeight="550.0" prefWidth="320.0">
          <children>
@@ -19,14 +22,61 @@
             </ImageView>
          </children>
       </Pane>
-      <Pane fx:id="RAM_Info" layoutX="320.0" prefHeight="550.0" prefWidth="320.0" scaleShape="false">
+      <Pane fx:id="Info" layoutX="320.0" prefHeight="550.0" prefWidth="320.0" scaleShape="false" stylesheets="@CSS/styles.css">
          <children>
             <Separator layoutX="-5.0" orientation="VERTICAL" prefHeight="550.0" prefWidth="5.0" style="-fx-background-color: #C2C0A6;" />
-            <Text fill="#bde038" layoutX="56.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Urzisoft Benchmark">
+            <Text fx:id="TextHover" fill="WHITE" layoutX="23.0" layoutY="45.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="1.5" styleClass="textAbout" text="Urzisoft Benchmark">
                <font>
-                  <Font name="Calibri" size="26.0" />
+                  <Font name="Calibri" size="34.0" />
                </font>
             </Text>
+            <Label fx:id="TextAbout" graphicTextGap="0.0" layoutX="10.0" layoutY="68.0" lineSpacing="2.0" prefHeight="415.0" prefWidth="300.0" styleClass="textLabel" stylesheets="@CSS/styles.css" text="Our team developed Urzisoft Benchmark, an efficient tool for testing CPU and RAM. This program enables users to accurately measure the performance of their computer hardware, including its processing speed and memory capacity. Our benchmark is user-friendly and designed to provide reliable and consistent results. With its precise measurements and intuitive  interface, Urzisoft Benchmark is a valuable resource for anyone seeking to optimize their computer's performance. " textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="Calibri Bold" size="19.0" />
+               </font>
+               <effect>
+                  <Glow level="0.48" />
+               </effect>
+            </Label>
+            <Pane fx:id="TeamPane" layoutX="20.0" layoutY="160.0" opacity="0.0">
+               <children>
+                  <Text fill="WHITE" layoutX="25.0" layoutY="55.0" stroke="#67a35c" strokeType="OUTSIDE" strokeWidth="0.5" text="Andăr Răzvan" textAlignment="CENTER" wrappingWidth="230.13674926757812">
+                     <font>
+                        <Font name="Calibri Bold" size="28.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" layoutX="25.0" layoutY="110.0" stroke="#67a35c" strokeType="OUTSIDE" strokeWidth="0.5" text="Buș Raul" textAlignment="CENTER" wrappingWidth="230.13674926757812">
+                     <font>
+                        <Font name="Calibri Bold" size="28.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" layoutX="25.0" layoutY="165.0" stroke="#67a35c" strokeType="OUTSIDE" strokeWidth="0.5" text="Chileban Dragoș" textAlignment="CENTER" wrappingWidth="230.13674926757812">
+                     <font>
+                        <Font name="Calibri Bold" size="28.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" layoutX="25.0" layoutY="220.0" stroke="#67a35c" strokeType="OUTSIDE" strokeWidth="0.5" text="Crișan Alexandru" textAlignment="CENTER" wrappingWidth="230.13674926757812">
+                     <font>
+                        <Font name="Calibri Bold" size="28.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" stroke="#5c8aa3" strokeType="OUTSIDE" strokeWidth="2.0" text="Team Members " textAlignment="CENTER" wrappingWidth="280.0">
+                     <font>
+                        <Font name="Calibri Bold" size="39.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
+            <Button fx:id="TeamButton" layoutX="20.0" layoutY="500.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="100.0" styleClass="smallButton" stylesheets="@CSS/styles.css" text="Team" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="Calibri Bold" size="19.0" />
+               </font>
+            </Button>
+            <Button fx:id="MoreButton" layoutX="200.0" layoutY="500.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="100.0" styleClass="smallButton" stylesheets="@CSS/styles.css" text="More" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="Calibri Bold" size="19.0" />
+               </font>
+            </Button>
          </children>
       </Pane>
       <Pane fx:id="CPU_Info" layoutX="640.0" prefHeight="550.0" prefWidth="320.0">
