--- a/src/main/resources/com/example/frontend_urzisoft/hello-view.fxml
+++ b/src/main/resources/com/example/frontend_urzisoft/hello-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -24,6 +25,16 @@
                   <Font name="Impact" size="54.0" />
                </font>
             </Text>
+            <ImageView fx:id="LeaderboardPng" fitHeight="150.0" fitWidth="200.0" layoutX="1127.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@png/LeaderBoard.gif" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="AboutPng" fitHeight="150.0" fitWidth="167.0" layoutX="725.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@png/About.gif" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <AnchorPane fx:id="menuPane" layoutX="35.0" layoutY="222.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="456.0" prefWidth="250.0">
@@ -44,7 +55,7 @@
             </Pane>
             <Pane layoutY="150.0" styleClass="menuButton" stylesheets="@CSS/styles.css">
                <children>
-                  <Button fx:id="ramTestButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onRAMTestButtonClicked" prefHeight="54.0" prefWidth="250.0" styleClass="menuButton" stylesheets="@CSS/styles.css" text="RAM Test" textFill="WHITE">
+                  <Button fx:id="ramTestButton" alignment="CENTER" contentDisplay="CENTER" layoutX="-6.0" layoutY="1.0" mnemonicParsing="false" onAction="#onRAMTestButtonClicked" prefHeight="54.0" prefWidth="250.0" styleClass="menuButton" stylesheets="@CSS/styles.css" text="RAM Test" textFill="WHITE">
                      <font>
                         <Font name="Snap ITC" size="79.0" />
                      </font>
@@ -120,6 +131,23 @@
       <Separator layoutX="315.0" layoutY="173.0" orientation="VERTICAL" prefHeight="547.0" prefWidth="7.0" style="-fx-background-color: #C2C0A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="315.0" AnchorPane.topAnchor="173.0" />
 
       <Separator layoutY="173.0" prefHeight="5.0" prefWidth="1280.0" style="-fx-background-color: #C2C0A6;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="173.0" />
-      <AnchorPane fx:id="borderpane" layoutX="322.0" layoutY="178.0" maxHeight="958.0" maxWidth="964.0" minHeight="550.0" minWidth="958.0" prefHeight="550.0" prefWidth="958.0" style="-fx-background-color: transparent;" />
+      <AnchorPane fx:id="borderpane" layoutX="315.0" layoutY="175.0" maxHeight="958.0" maxWidth="964.0" minHeight="550.0" minWidth="958.0" prefHeight="550.0" prefWidth="958.0" style="-fx-background-color: transparent;">
+         <children>
+            <ImageView disable="true" fitHeight="150.0" fitWidth="200.0" layoutX="356.0" layoutY="301.0" pickOnBounds="true" preserveRatio="true" scaleX="1.2" scaleY="1.2000000000000002">
+               <image>
+                  <Image url="@png/Loading.gif" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="178.0" layoutY="166.0" pickOnBounds="true" preserveRatio="true" scaleX="1.2" scaleY="1.2000000000000002">
+               <image>
+                  <Image url="@png/pngwing.com.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="216.0" layoutY="197.0" prefHeight="70.0" prefWidth="105.0" scaleX="1.2" scaleY="1.2000000000000002" text="Loading Hardware" textAlignment="CENTER" textFill="#2cbbc5" wrapText="true">
+               <font>
+                  <Font name="Calibri Bold" size="25.0" />
+               </font>
+            </Label>
+         </children></AnchorPane>
    </children>
 </AnchorPane>
