--- a/src/main/resources/com/example/frontend_urzisoft/Home-view.fxml
+++ b/src/main/resources/com/example/frontend_urzisoft/Home-view.fxml
@@ -15,7 +15,7 @@
          <children>
             <Text fill="WHITE" layoutX="80.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="System Information">
                <font>
-                  <Font name="Calibri" size="20.0" />
+                  <Font name="Calibri Bold" size="20.0" />
                </font>
             </Text>
             <Text fill="#ecf6fc" layoutX="30.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Operating System:">
@@ -57,14 +57,14 @@
       </Pane>
       <Pane fx:id="RAM_Info" layoutX="320.0" prefHeight="550.0" prefWidth="320.0" scaleShape="false">
          <children>
-            <Text fx:id="RAM_Manufacturer" fill="#dbf227" layoutX="150.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="OS" wrappingWidth="155.0">
+            <Text fx:id="RAM_Manufacturer" fill="#dbf227" layoutX="150.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 20;" text="OS" wrappingWidth="155.0">
                <font>
-                  <Font name="Calibri Bold" size="16.0" />
+                  <Font name="Calibri Bold" size="21.0" />
                </font>
             </Text>
             <Text fill="WHITE" layoutX="90.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="RAM Information">
                <font>
-                  <Font name="Calibri" size="20.0" />
+                  <Font name="Calibri Bold" size="20.0" />
                </font>
             </Text>
             <Text fill="WHITE" layoutX="20.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manufacturer:">
@@ -82,14 +82,14 @@
                   <Font name="Calibri Bold" size="20.0" />
                </font>
             </Text>
-            <Text fx:id="RAM_Capacity" boundsType="VISUAL" fill="#dbf227" layoutX="150.0" layoutY="280.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Model" wrappingWidth="200.0">
+            <Text fx:id="RAM_Capacity" boundsType="VISUAL" fill="#dbf227" layoutX="103.0" layoutY="280.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 20;" text="Model" wrappingWidth="200.0">
                <font>
-                  <Font name="Calibri Bold" size="16.0" />
+                  <Font name="Calibri Bold" size="21.0" />
                </font>
             </Text>
-            <Text fx:id="RAM_Frequency" fill="#dbf227" layoutX="150.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" wrappingWidth="200.0">
+            <Text fx:id="RAM_Frequency" fill="#dbf227" layoutX="125.0" layoutY="339.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 20;" wrappingWidth="186.66668701171875">
                <font>
-                  <Font name="Calibri Bold" size="16.0" />
+                  <Font name="Calibri Bold" size="21.0" />
                </font>
             </Text>
             <Text fill="WHITE" layoutX="20.0" layoutY="400.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type:">
@@ -97,9 +97,9 @@
                   <Font name="Calibri Bold" size="20.0" />
                </font>
             </Text>
-            <Text fx:id="RAM_Type" fill="#dbf227" layoutX="150.0" layoutY="400.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Type:">
+            <Text fx:id="RAM_Type" fill="#dbf227" layoutX="71.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 20;" text="Type:">
                <font>
-                  <Font name="Calibri Bold" size="16.0" />
+                  <Font name="Calibri Bold" size="21.0" />
                </font>
             </Text>
             <Separator layoutX="-5.0" orientation="VERTICAL" prefHeight="550.0" prefWidth="5.0" style="-fx-background-color: #C2C0A6;" />
@@ -119,7 +119,7 @@
          <children>
             <Text fill="WHITE" layoutX="90.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CPU Information" wrappingWidth="166.458984375">
                <font>
-                  <Font name="Calibri" size="20.0" />
+                  <Font name="Calibri Bold" size="20.0" />
                </font>
             </Text>
             <Text fill="WHITE" layoutX="31.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:">
@@ -139,17 +139,17 @@
             </Text>
             <Text fx:id="CPU_Name" fill="#dbf227" layoutX="90.0" layoutY="219.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="I10" wrappingWidth="215.0">
                <font>
-                  <Font name="Calibri Bold" size="16.0" />
+                  <Font name="Calibri Bold" size="18.0" />
                </font>
             </Text>
-            <Text fx:id="CPU_Physical_Processors" boundsType="VISUAL" fill="#dbf227" layoutX="200.0" layoutY="280.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Model" wrappingWidth="200.0">
+            <Text fx:id="CPU_Physical_Processors" boundsType="VISUAL" fill="#dbf227" layoutX="200.0" layoutY="280.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 20;" text="Model" wrappingWidth="200.0">
                <font>
-                  <Font name="Calibri Bold" size="16.0" />
+                  <Font name="Calibri Bold" size="21.0" />
                </font>
             </Text>
-            <Text fx:id="CPU_Logical_Processors" fill="#dbf227" layoutX="195.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" wrappingWidth="100.0">
+            <Text fx:id="CPU_Logical_Processors" fill="#dbf227" layoutX="195.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 20;" wrappingWidth="100.0">
                <font>
-                  <Font name="Calibri" size="16.0" />
+                  <Font name="Calibri Bold" size="21.0" />
                </font>
             </Text>
             <Separator layoutX="-5.0" orientation="VERTICAL" prefHeight="550.0" prefWidth="5.0" style="-fx-background-color: #C2C0A6;" />
