--- a/src/main/resources/com/example/frontend_urzisoft/hello-view.fxml
+++ b/src/main/resources/com/example/frontend_urzisoft/hello-view.fxml
@@ -86,7 +86,7 @@
             </Pane>
             <Pane layoutY="222.0" styleClass="menuButton" stylesheets="@CSS/styles.css">
                <children>
-                  <Button fx:id="leaderboardButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onLeaderboardButtonClicked" prefHeight="54.0" prefWidth="250.0" styleClass="menuButton" stylesheets="@CSS/styles.css" text="Ledearboard" textFill="WHITE">
+                  <Button fx:id="leaderboardButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onLeaderboardButtonClicked" prefHeight="54.0" prefWidth="250.0" styleClass="menuButton" stylesheets="@CSS/styles.css" text="Leaderboard" textFill="WHITE">
                      <font>
                         <Font name="Snap ITC" size="79.0" />
                      </font>
@@ -131,7 +131,7 @@
       <Separator layoutX="315.0" layoutY="173.0" orientation="VERTICAL" prefHeight="547.0" prefWidth="7.0" style="-fx-background-color: #C2C0A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="315.0" AnchorPane.topAnchor="173.0" />
 
       <Separator layoutY="173.0" prefHeight="5.0" prefWidth="1280.0" style="-fx-background-color: #C2C0A6;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="173.0" />
-      <AnchorPane fx:id="borderpane" layoutX="315.0" layoutY="175.0" maxHeight="958.0" maxWidth="964.0" minHeight="550.0" minWidth="958.0" prefHeight="550.0" prefWidth="958.0" style="-fx-background-color: transparent;">
+      <AnchorPane fx:id="borderpane" layoutX="320.0" layoutY="178.0" maxHeight="958.0" maxWidth="964.0" minHeight="547.0" minWidth="958.0" prefHeight="547.0" prefWidth="958.0" style="-fx-background-color: transparent;">
          <children>
             <ImageView disable="true" fitHeight="150.0" fitWidth="200.0" layoutX="356.0" layoutY="301.0" pickOnBounds="true" preserveRatio="true" scaleX="1.2" scaleY="1.2000000000000002">
                <image>
